--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import url("https://rsms.me/inter/inter.css");
+
 * {
   box-sizing: border-box;
 }
@@ -9,7 +11,6 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-  background-color: #272727;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -19,8 +20,17 @@ body,
   overflow: hidden;
 }
 
+body {
+  font-family: "Inter", sans-serif;
+}
+
 #root {
   overflow: auto;
+  background: radial-gradient(
+    ellipse at 50% 50%,
+    rgba(162, 161, 162, 0.767) 40%,
+    rgb(146, 146, 146) 80%
+  );
 }
 
 body {
@@ -31,4 +41,31 @@ body {
     helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial, sans-serif;
   color: black;
   -webkit-font-smoothing: antialiased;
+}
+
+#root > a {
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  transform: scale(1.75);
+}
+#root > a > svg {
+  fill: none;
+}
+#root > a > svg > path:nth-child(1) {
+  fill: none;
+}
+#root > a > svg > path:nth-child(2) {
+  fill: #fff;
+}
+#root > a > svg > path:nth-child(3) {
+  fill: #fff;
+}
+
+a {
+  pointer-events: all;
+  cursor: pointer;
+  color: white;
+  text-decoration: none;
+  margin-left: 20px;
 }
